--- a/indexS.html
+++ b/indexS.html
@@ -14,9 +14,9 @@
            <div class="touchesS">
              <button  data-key="8" class="button">C</button>
              <button  data-key="53" class="button">(</button>
-             <button  data-key="169" class="button">)</button>
+             <button  data-key="219" class="button">)</button>
              <button  data-key="191" class="button">/</button>
-             <button  data-key="" class="button">cos</button>
+             <button  data-key="112" class="button">cos</button>
              <button  data-key="55" class="button">7</button>
              <button  data-key="56" class="button">8</button>
              <button  data-key="57" class="button">9</button>
@@ -26,7 +26,7 @@
              <button  data-key="101" class="button">5</button>
              <button  data-key="54" class="button">6</button>
              <button  data-key="109" class="button">-</button>
-             <button  data-key="192" class="button">%</button>
+             <button  data-key="222" class="button">tan</button>
              <button  data-key="49" class="button">1</button>
              <button  data-key="50" class="button">2</button>
              <button  data-key="51" class="button">3</button>
@@ -34,7 +34,7 @@
              <button  data-key="227" class="button">&pi;</button>
              <button  data-key="48" class="button">0</button>
              <button  data-key="190" class="button">.</button>
-             <button  data-key="" class="button">?</button>
+             <button  data-key="111" class="button">Log2</button>
              <button  data-key="13" class="button" id="S">=</button>
            </div>
     </div>
